[gd_scene load_steps=18 format=3 uid="uid://d3m3pthstoelx"]

[ext_resource type="Script" path="res://Scripts/Cash.gd" id="1_wjjbo"]
[ext_resource type="Texture2D" uid="uid://dtey7mq3og40d" path="res://assets/etc/Money.png" id="2_kau2e"]
[ext_resource type="AudioStream" uid="uid://dbnystp0y1gke" path="res://assets/FutrueSFX/PickUp.wav" id="3_jwobk"]
[ext_resource type="Texture2D" uid="uid://c1t7ic4fo0him" path="res://assets/etc/health.png" id="4_irqxg"]
[ext_resource type="Texture2D" uid="uid://bnhfvq2i6dbp8" path="res://assets/etc/Icons_25.png" id="5_k002h"]
[ext_resource type="Texture2D" uid="uid://35dyx2vgd6cm" path="res://assets/etc/Star.png" id="6_skr7e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h05mr"]
atlas = ExtResource("2_kau2e")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvgix"]
atlas = ExtResource("2_kau2e")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkpmr"]
atlas = ExtResource("2_kau2e")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcqf6"]
atlas = ExtResource("2_kau2e")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7edu2"]
atlas = ExtResource("2_kau2e")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_87p2h"]
atlas = ExtResource("2_kau2e")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_73xw1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h05mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvgix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkpmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcqf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7edu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87p2h")
}],
"loop": true,
"name": &"spin",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w81d5"]
radius = 11.1803

[sub_resource type="Animation" id="Animation_d0yw4"]
resource_name = "moveUpnDown"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2.5), Vector2(0, -5), Vector2(0, -10), Vector2(0, -12), Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_mhxhs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fdu0"]
_data = {
"RESET": SubResource("Animation_mhxhs"),
"moveUpnDown": SubResource("Animation_d0yw4")
}

[node name="Cash" type="Area2D"]
scale = Vector2(1.16, 1.12)
collision_layer = 32
collision_mask = 33
script = ExtResource("1_wjjbo")

[node name="CashSpin" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.5, 1.41667)
sprite_frames = SubResource("SpriteFrames_73xw1")
animation = &"spin"
autoplay = "spin"
frame_progress = 0.153313

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w81d5")

[node name="GroundRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 18.75)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jwobk")
volume_db = -1.799
pitch_scale = 0.78
playback_type = 1

[node name="Health" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -0.892857)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_irqxg")

[node name="Heart" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -2.67857)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_k002h")

[node name="Star" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -0.892857)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_skr7e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6fdu0")
}

[node name="QueueTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 30.014
autostart = true

[connection signal="add_cash" from="." to="." method="_on_add_cash"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="timeout" from="QueueTimer" to="." method="_on_queue_timer_timeout"]
